# premise_update

./: README.md  pyproject.toml
blueprint_plaza/: main.py
blueprint_plaza/actions/login/: login_routes.py
blueprint_plaza/actions/publish/: publish_routes.py
blueprint_plaza/db/: connection.py
blueprint_plaza/forms/: publish_form.py
blueprint_plaza/models/: property.py
blueprint_plaza/templates/: placeholder.html  publish.html
premise_update/: main.py
premise_update/login/: login_routes.py
premise_update/templates/: login.html
